# httpmsgbus

./: CMakeLists.txt  Dockerfile  README  README.debugging  getgo.sh  hmb.conf.example  install.sh
apps/: CMakeLists.txt
apps/export2hmb/: CMakeLists.txt  export2hmb.cpp  export2hmb.h  main.cpp
apps/export2hmb/descriptions/: export2hmb.xml
apps/go/: CMakeDetermineGoCompiler.cmake  CMakeGoCompiler.cmake.in  CMakeGoInformation.cmake  CMakeLists.txt
apps/go/src/: CMakeLists.txt
apps/go/src/hmb/: bsonio.go  client.go  go.mod  types.go
apps/go/src/hmbseedlink/: CMakeLists.txt  common.go  go.mod  go.sum  info.go  main.go  master.go  slconn.go
apps/go/src/hmbseedlink/config/: hmbseedlink.py
apps/go/src/hmbseedlink/descriptions/: hmbseedlink.xml
apps/go/src/httpmsgbus/: CMakeLists.txt  bsonio.go  bus.go  filedb.go  filter.go  go.mod  go.sum  jsonio.go  main.go  message.pb.go  message.proto  mongodb.go  producer.go  queue.go  session.go  types.go  utils.go
apps/go/src/httpmsgbus/config/: httpmsgbus.py
apps/go/src/httpmsgbus/descriptions/: httpmsgbus.xml
apps/go/src/regexp/: go.mod  regexp.go
apps/go/src/wavefeed/: CMakeLists.txt  go.mod  main.go
apps/go/src/wavefeed/config/: wavefeed.py
apps/go/src/wavefeed/descriptions/: wavefeed.xml
apps/pick2hmb/: CMakeLists.txt  main.cpp  pick2hmb.cpp  pick2hmb.h
apps/pick2hmb/config/: pick2hmb.py
apps/pick2hmb/descriptions/: pick2hmb.xml
doc/: Makefile  conf.py  hmbseedlink.rst  httpmsgbus.rst  index.rst  installation.rst  intro.rst  make.bat  protocol.rst  usecases.rst  utilities.rst  wavefeed.rst
doc/examples/python/: receive_bson.py  receive_json.py  send_bson.py  send_json.py
libs/: CMakeLists.txt
libs/python/hmb/: client.py
