SET(EXPORT2HMB_TARGET export2hmb)

SET(
    EXPORT2HMB_HEADERS
    imexmessage.h
    export2hmb.h
)

SET(
    EXPORT2HMB_SOURCES
    imexmessage.cpp
    export2hmb.cpp
    main.cpp
)

SC_ADD_EXECUTABLE(EXPORT2HMB ${EXPORT2HMB_TARGET})
TARGET_LINK_LIBRARIES(${EXPORT2HMB_TARGET} ${Boost_thread_LIBRARY})
SC_LINK_LIBRARIES_INTERNAL(${EXPORT2HMB_TARGET} client)
SC_INSTALL_INIT(${EXPORT2HMB_TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/config/export2hmb.py)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/export2hmb.cfg)
        INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/export2hmb.cfg
                DESTINATION ${SC3_PACKAGE_CONFIG_DIR})
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/export2hmb.cfg)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/base/common/libs)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/base/common/libs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/base/common/libs/3rd-party/libbson/src)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/base/common/libs/3rd-party/libbson/src)

