SET(PICK2HMB_TARGET pick2hmb)

SET(
    PICK2HMB_HEADERS
    pick2hmb.h
)

SET(
    PICK2HMB_SOURCES
    pick2hmb.cpp
    main.cpp
)

SC_ADD_EXECUTABLE(PICK2HMB ${PICK2HMB_TARGET})
TARGET_LINK_LIBRARIES(${PICK2HMB_TARGET} ${Boost_thread_LIBRARY})
SC_LINK_LIBRARIES_INTERNAL(${PICK2HMB_TARGET} client)
SC_INSTALL_INIT(${PICK2HMB_TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/config/pick2hmb.py)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/pick2hmb.cfg)
        INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/pick2hmb.cfg
                DESTINATION ${SC3_PACKAGE_CONFIG_DIR})
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/pick2hmb.cfg)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/system/libs)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/system/libs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/trunk/libs)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/trunk/libs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/trunk/libs/3rd-party/libbson/src/bson)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/trunk/libs/3rd-party/libbson/src/bson)

