SET(HMBSEEDLINK_TARGET hmbseedlink)

SET(
    HMBSEEDLINK_SOURCES
    common.go
    info.go
    main.go
    master.go
    slconn.go
)

ADD_EXECUTABLE(${HMBSEEDLINK_TARGET} ${HMBSEEDLINK_SOURCES})

ADD_CUSTOM_TARGET(
    HMBSEEDLINK_VENDOR
    COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/../vendor .
)

ADD_DEPENDENCIES(${HMBSEEDLINK_TARGET} HMBDEPS HMBSEEDLINK_VENDOR)

INSTALL(TARGETS ${HMBSEEDLINK_TARGET}
    DESTINATION ${SC3_PACKAGE_SBIN_DIR}
)

SC_INSTALL_INIT(hmbseedlink config/hmbseedlink.py)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/hmbseedlink.cfg)
        INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/hmbseedlink.cfg
                DESTINATION ${SC3_PACKAGE_CONFIG_DIR})
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/hmbseedlink.cfg)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

