SET(WAVEFEED_TARGET wavefeed)

SET(
    WAVEFEED_SOURCES
    main.go
)

ADD_EXECUTABLE(${WAVEFEED_TARGET} ${WAVEFEED_SOURCES})

ADD_CUSTOM_TARGET(
    WAVEFEED_VENDOR
    COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/../vendor .
)

ADD_DEPENDENCIES(${WAVEFEED_TARGET} HMBDEPS WAVEFEED_VENDOR)

INSTALL(TARGETS ${WAVEFEED_TARGET}
    DESTINATION ${SC3_PACKAGE_SBIN_DIR}
)

SC_INSTALL_INIT(wavefeed config/wavefeed.py)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/wavefeed.cfg)
        INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/wavefeed.cfg
                DESTINATION ${SC3_PACKAGE_CONFIG_DIR})
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config/wavefeed.cfg)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

